--- a/main.html
+++ b/main.html
@@ -9,7 +9,7 @@
 	<script src="js/app.js"></script>
 </head>
 <body>
-<div class="main">
+<div class="main"> <audio id="hadouken-sound" src="sound/hadouken.mp3"></audio>
 	<div class="ryu">
 		<div class="hadouken"></div>
 		<div class="ryu-still"></div>
